# swift-android-examples

./: .gitignore  README.md  settings.gradle.kts  swift-android.gradle.kts
hello-cpp-swift/: README.md
hello-cpp-swift/app/: build.gradle.kts
hello-cpp-swift/app/src/main/java/com/example/hellocppswift/: MainActivity.kt
hello-cpp-swift/app/src/main/res/values/: strings.xml
hello-cpp-swift/cpp-lib/: CMakeLists.txt  build-android-static.sh
hello-cpp-swift/cpp-lib/include/: calculator.h  module.modulemap
hello-cpp-swift/swift-lib/: Package.swift  build.gradle
hello-cpp-swift/swift-lib/Sources/HelloCppSwift/: Calculator.swift  swift-java.config
hello-swift-java/hashing-lib/: build.gradle
swift-java-weather-app/weather-lib/: build.gradle
